[tool.poetry]
name = "wxdat"
version = "1.5.1"
description = "Weather data explorer."
authors = ["jheddings <jheddings@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.7"
requests = "^2.32.5"
click = "^8.2.2"
prometheus-client = "^0.22.1"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.43"
psycopg2 = "^2.9.10"
ratelimit = "^2.2.1"
pyyaml = "^6.0.2"
wamu = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-vcr = "^1.0.2"
coverage = "^7.10.5"
ruff = "^0.12.10"
gitpython = "^3.1.45"

[tool.poetry.scripts]
wxdat = "wxdat.__main__:main"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
