[project]
name = "wxdat"
version = "1.5.3"
description = "Weather data explorer."
authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
requires-python = ">=3.12, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.32.5,<3",
    "click>=8.3.0,<9",
    "prometheus-client>=0.23.1,<0.24",
    "pydantic>=2.12.4,<3",
    "sqlalchemy>=2.0.44,<3",
    "psycopg2>=2.9.11,<3",
    "ratelimit>=2.2.1,<3",
    "pyyaml>=6.0.3,<7",
    "wamu>=0.3.5,<0.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0,<5",
    "pytest>=8.4.2,<9",
    "pytest-vcr>=1.0.2,<2",
    "coverage>=7.11.0,<8",
    "ruff>=0.14.3,<0.15",
    "gitpython>=3.1.45,<4",
]

[project.scripts]
wxdat = "wxdat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wxdat"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line_length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
