[project]
name = "wxdat"
version = "1.5.4"
description = "Weather data explorer."
authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
requires-python = ">=3.12, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.33.1,<3",
    "click>=8.3.2,<9",
    "prometheus-client>=0.24.1,<0.25",
    "pydantic>=2.12.5,<3",
    "sqlalchemy>=2.0.49,<3",
    "psycopg2>=2.9.11,<3",
    "ratelimit>=2.2.1,<3",
    "pyyaml>=6.0.3,<7",
    "wamu>=0.3.6,<0.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5",
    "pytest>=9.0.3,<10",
    "pytest-vcr>=1.0.2,<2",
    "coverage>=7.13.5,<8",
    "ruff>=0.15.9,<0.16",
    "pyright>=1.1.408",
    "gitpython>=3.1.46,<4",
]

[project.scripts]
wxdat = "wxdat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wxdat"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "ERA", # eradicate
    "UP",  # pyupgrade
    "I",   # isort
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.lint.isort]
known-first-party = ["wxdat"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportReturnType = false
reportInvalidTypeForm = false
reportOptionalOperand = false
